# valorantx-private

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  test_assets.py  test_in_game.py  todo.text
concepts/: chat.py
concepts/chat/: __init__.py  abc.py  client.py  context.py  message.py  websocket.py  wss.py
data/: spacial_weapons.json
examples/: auth.py  items.py  valorant_api.py
tests/: conftest.py  test_assets.py  test_client.py  test_in_game.py  test_patch_note.py  test_valorant_api.py
valorant/: __init__.py  asset.py  asset_manager.py  assets.py  auth.py  client.py  enums.py  errors.py  file.py  http.py  localization.py  utils.py
valorant/cache/: __init__.py
valorant/models/: __init__.py  agent.py  base.py  buddies.py  buddy.py  bundle.py  bundles.py  ceremony.py  collection.py  competitive.py  content.py  contents.py  contract.py  contracts.py  currency.py  event.py  gamemode.py  gear.py  item.py  level_border.py  map.py  match.py  mission.py  missions.py  other.py  party.py  patchnote.py  player.py  player_card.py  player_cards.py  player_title.py  season.py  spray.py  sprays.py  store.py  theme.py  version.py  weapons.py  xp.py
valorant/types/: __init__.py  base.py  competitive.py  match.py  party.py  player.py  store.py  version.py
valorantx/: __init__.py  asset.py  assets.py  auth.py  client.py  enums.py  errors.py  file.py  http.py  localization.py  utils.py  valorant_api_cache.py  valorant_api_client.py
valorantx/models/: __init__.py  abc.py  account_xp.py  agent.py  agents.py  base.py  buddies.py  buddy.py  bundle.py  bundles.py  ceremonies.py  ceremony.py  collection.py  competitive.py  competitive_tiers.py  config.py  content.py  content_tiers.py  (+46 more)
valorantx2/: __init__.py  auth.py  client.py  enums.py  errors.py  http.py  utils.py  valorant_api_cache.py  valorant_api_client.py
(+169 files in other folders)
